--- a/icmake/doc/icmake.1
+++ b/icmake/doc/icmake.1
@@ -1,4 +1,4 @@
-.TH "icmake" "1" "1992\-2012" "icmake\&.7\&.17\&.00\&.tar\&.gz" "A program maintenance utility"
+.TH "icmake" "1" "1992\-2012" "icmake\&.7\&.18\&.00\&.tar\&.gz" "A program maintenance utility"
 
 .PP 
 .SH "NAME"
@@ -32,7 +32,15 @@ in program maintenance\&.
 The program \fBicmun\fP(1) may be used to disassemble the compiled 
 byte\-code file\&.
 .PP 
-.SH "NEW IN VERSION 7\&.00"
+Traditional make\-utilities recompile sources once header files are
+modified\&. In the context of \fBC++\fP program development this is often a bad
+idea, as adding a new member to a class does not normally require you to
+recompile the class\(cq\&s sources\&. To handle class dependencies in a more sensible
+way, \fBicmake\fP(1)\(cq\&s \fICLASSES\fP file may define dependencies among
+classes\&. By default, class\-dependencies are not interpreted\&. See the
+\fBicmconf\fP(7) man\-page for details\&.
+.PP 
+.SH "ADDITONS SINCE VERSION 7\&.00"
 
 .PP 
 .IP o 
