--- a/icmake/doc/icmbuild.1
+++ b/icmake/doc/icmbuild.1
@@ -1,4 +1,4 @@
-.TH "icmbuild" "1" "1992\-2014" "icmake\&.7\&.21\&.01\&.tar\&.gz" "A generic program maintenance script"
+.TH "icmbuild" "1" "1992\-2015" "icmake\&.7\&.22\&.00\&.tar\&.gz" "A generic program maintenance script"
 
 .PP 
 .SH "NAME"
@@ -156,7 +156,7 @@ program, using the library \fIlibbobcat1\fP as an additional library:
 
     // The compiler options to use\&. Define CFLAGS instead if a C compiler is
     // used\&.
-#define CXXFLAGS        \(dq\& \-\-std=c++0x \-Wall \-g \-O2\(dq\&
+#define CXXFLAGS        \(dq\& \-\-std=c++14 \-Wall \-g \-O2\(dq\&
 //#define CFLAGS        \(dq\& \-Wall \-g \-O2\(dq\&
 
     // Options passed to the linker:
@@ -250,12 +250,8 @@ program, using the library \fIlibbobcat1\fP as an additional library:
     //  Use the VERSION file
 #define USE_VERSION
 
-
     // #define DEFCOM \(dq\&program\(dq\& (or \(dq\&library\(dq\&) may be added (by, e\&.g\&.,
     // icmstart) 
-
-
-
 
 .fi 
 
