--- a/icmake/INSTALL
+++ b/icmake/INSTALL
@@ -63,20 +63,13 @@ In particular check:
         DOCDIR      various doc-files (e.g., changelog)
         DOCDOCDIR   more extensive documentation (icmake.ps, examples)
 
-    If you're compiling for a CYGWIN environment, the executables must have
-the extension .exe: in that case uncomment the appropriate #define EXTENSION
-line. I.e.:
-
-    For CYGWIN:
-        #define EXTENSION   ".exe"
-
 
     - Inspect (and optionally modify) the availability of the program
 mentioned in ./def/programs (they should be available on any Unix(like)
 systems). 
 
 
-    - Next run the shell-script `bootstrap' as follows:
+    - Next run the shell-script `icm_bootstrap' as follows:
 
                             ./icm_bootstrap /
 
@@ -86,36 +79,58 @@ in
     tmp/$BINDIR, tmp/$SKELDIR, tmp/$MANDIR, tmp/$LIBDIR, tmp/$CONFDIR,
     tmp/$DOCDIR, tmp/$DOCDOCDIR
 
+NOTE:
+
+There have been reports about failing compilations of the file ./comp/lexer.c.
+This is usually caused by incompatibilities between the existing lexer.c file
+and the lex(1) run-time library. These problems are commonly solved after
+running in the directory ./comp the command
+
+        flex -c lexer.c lexer 
+
+and by declaring yyleng in comp/iccomp.h as
+
+        extern size_t yyleng;            /* strlen(yytext) */
+
 
 3. Install the files
 ====================
 
     You probably must do this as `root':
 
-                            ./icm_install [strip] all
+                            ./icm_install [strip] all /
 
-    This will install all files under the root directory (initially specied
-when calling icm_bootstrap) When providing the strip arguments binaries will
-be stripped.
+    This installs all files under the root directory (which was initially
+specied when calling icm_bootstrap) When providing the strip arguments
+binaries will be stripped.
 
     Note that by default unstripped binaries will be installed.
     
     Separate parts may be installed as well. E.g.,
-           ./install [strip] progs      -   installs all executables
-           ./install scriupts           -   installs the icmstart/icmbuild
+           ./icm_install [strip] progs / -  installs all executables
+           ./icm_install scripts /       -  installs the icmstart/icmbuild
                                                      scripts 
-           ./install man                -   installs the man-pages
-           ./install skel               -   installs the skeletons
-           ./install etc                -   installs the default icmstart.rc
+           ./icm_install man /           -  installs the man-pages
+           ./icm_install skel /          -  installs the skeletons
+           ./icm_install etc /           -  installs the default icmstart.rc
                                                      related files
-           ./install doc                -   installs the docs
-           ./install docdoc             -   installs the extended docs and
-                                                     examples 
+           ./icm_install doc /           -  installs the docs
+           ./icm_install docdoc /        -  installs the extended docs and
+                                                 examples 
+
+The directory / mentioned in the examples usually matches the directory
+specified with icm_bootstrap. The latter directory is assumed to be the
+installation directory. By specifying another directory with icm_install the
+software will be installed under the specified directory. It might not run
+from those locations because of paths built into the software at compile-time,
+but it can be used to create a temporary directory under which the software is
+installed, then, e.g., tar the contents of that directory to be untarred at a
+later moment in time at its final destination.
 
 4. Clean up the garbage
 =======================
-                        rm -rf tmp
 
+                        rm -rf tmp
 
 5. Predefined symbols
 =====================
@@ -148,7 +163,9 @@ Currently the following symbols are predefined:
         --------------------------------------------------------------
         MSDOS           MS-DOS platform (with MSC 7.00 compiler)
         unix            Unix, usually with GNU's gcc compiler
+        UNIX            same
         linux           '386 or '486 running Linux (usually with gcc)
+        LINUX           same
         M_SYSV, M_UNIX  '386 or '486 running SCO/Unix (usually with
                         Microsoft C)
         _POSIX_SOURCE   Unix with Posix complient compiler
@@ -156,7 +173,7 @@ Currently the following symbols are predefined:
         --------------------------------------------------------------
 
 If you want to modify something here which hasn't been done before, please
-email us about it, and we'll include it in the standard distribution.
+email me about it, and I'll include it in the standard distribution.
 
 
 
@@ -170,12 +187,12 @@ Alternatively, you can compile icmake yourself. If you prefer doing this, you
 could act as follows:
 
 (a) Note that even though grammar definition and lexical scanner definition
-    files (parser and lexer) are found at several subdirectories, the bison and
-    flex programs should *NOT* be used. The parser.c and lexer.c files are
+    files (parser and lexer) are found at several subdirectories, the bison
+    and flex programs should *NOT* be used. The parser.c and lexer.c files are
     already available, and you might run into name-resolution problems if you
     try to create parser.c or lexer.c with the bison/flex found at your site.
     The parser and lexer files were included for documentation purposes only,
-    don't feed them to bison or flex.
+    don't feed them to bison or flex
 
 (b) With some files the (GNU-C) compiler generates warnings. These warnings
     fall into two categories: 'default' entry proints in switches cause the
